removed node packages

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="mediaquery.css" />
-    <script src="index.js"></script>
+    <script src="index.js" defer></script>
+    <script src="https://cdn.rawgit.com/davidshimjs/qrcodejs/gh-pages/qrcode.min.js"></script>
     <title>QR Code Generator</title>
   </head>
   <body>
@@ -18,14 +19,23 @@
           <input type="text" name="text" id="text" />
         </div>
         <div class="left-container-button">
-          <button class="button1">Generate</button>
+          <button class="button1" id="button_gen_1" onclick="generateQRCode()">
+            Generate QR
+          </button>
         </div>
       </div>
       <div class="right-container">
         <div class="qr">
-          <div class="qr1"></div>
+          <div class="qr1" id="qr_generator" class="qr_generator"></div>
+
+          <div class="qr-text">
+            <p class="qr-text1" id="qr-text1"></p>
+          </div>
+
           <div class="right-container-button">
-            <button class="button2">Download</button>
+            <a href="./qr_img1.png" download>
+              <button class="button2">Download</button>
+            </a>
           </div>
         </div>
       </div>
