--- a/index.html
+++ b/index.html
@@ -33,9 +33,7 @@
           </div>
 
           <div class="right-container-button">
-            <a href="./qr_img1.png" download>
-              <button class="button2">Download</button>
-            </a>
+            <button class="button2" id="button2">Download</button>
           </div>
         </div>
       </div>
