--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </div>
       </div>
       <div class="right-container">
-        <div class="qr">
+        <div class="qr" id="qr">
           <div class="qr1" id="qr_generator" class="qr_generator"></div>
 
           <div class="qr-text">
